--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "knex": "^2.4.2",
-    "query_translate": "^1.0.13"
+    "query_translate": "^1.0.13",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
