--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/api.js",
     "dev": "export TS_NODE_FILES=true; nodemon src/api.ts",
     "build": "tsc -p .",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "build-exec": "tsc -p . && pkg dist/api.js --out-path executables"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "knex": "^2.4.2",
+    "minimist": "^1.2.8",
     "query_translate": "^1.0.13",
     "socket.io": "^4.6.1"
   },
